manifest/prometheus/alert-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: "alertmanager"
    app: prometheus
    release: prom-stack-cockpit
    chart: prometheus-15.10.4
    heritage: Helm
  name: prom-stack-cockpit-prometheus-alertmanager
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9093
  selector:
    component: "alertmanager"
    app: prometheus
    release: prom-stack-cockpit
  sessionAffinity: None
  type: "ClusterIP"
