manifest/prometheus/kube-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prom-stack-cockpit-kube-state-metrics
  labels:    
    helm.sh/chart: kube-state-metrics-4.13.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: kube-state-metrics
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/instance: prom-stack-cockpit
    app.kubernetes.io/version: "2.5.0"
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: "ClusterIP"
  ports:
  - name: "http"
    protocol: TCP
    port: 8080
    targetPort: 8080
  
  selector:    
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/instance: prom-stack-cockpit
