manifest/prometheus/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    component: "node-exporter"
    app: prometheus
    release: prom-stack-cockpit
    chart: prometheus-15.10.4
    heritage: Helm
  name: prom-stack-cockpit-prometheus-node-exporter
spec:
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    component: "node-exporter"
    app: prometheus
    release: prom-stack-cockpit
  type: "ClusterIP"
