manifest/prometheus/prometheus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: "server"
    app: prometheus
    release: prom-stack-cockpit
    chart: prometheus-15.10.4
    heritage: Helm
  name: prom-stack-cockpit-prometheus-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    component: "server"
    app: prometheus
    release: prom-stack-cockpit
  sessionAffinity: None
  type: "ClusterIP"
