manifest/prometheus/pushgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: pushgateway
  labels:
    component: "pushgateway"
    app: prometheus
    release: prom-stack-cockpit
    chart: prometheus-15.10.4
    heritage: Helm
  name: prom-stack-cockpit-prometheus-pushgateway
spec:
  ports:
    - name: http
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    component: "pushgateway"
    app: prometheus
    release: prom-stack-cockpit
  type: "ClusterIP"
